src/test/resources/lab2-samples/bad4.out

*** Error line 2.
  x = 123.4.554;
            ^^^
*** syntax error

