src/test/resources/lab2-samples/bad4.decaf
void main() {
  x = 123.4.554;
  y = x;
  if x Print("wacky");
  return true;
}
